[package]
name = "game"
version = "0.1.0"
publish = false
authors = ["Markus Wege <hypersurf@gmail.com>"] # ToDo: you are the author ;)
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
iyes_perf_ui = "0.2.3"

[workspaces]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true
